--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -419,6 +419,11 @@
             android:key="checkbox_lock_screen_after_disconnect"
             android:summary="@string/summary_checkbox_lock_screen_after_disconnect"
             android:title="@string/title_checkbox_lock_screen_after_disconnect" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="checkbox_swap_quit_and_disconnect"
+            android:summary="@string/summary_checkbox_swap_quit_and_disconnect"
+            android:title="@string/title_checkbox_swap_quit_and_disconnect" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/category_ui_settings"
         android:key="category_ui_settings"
