--- a/app/src/main/res/layout/activity_app_view.xml
+++ b/app/src/main/res/layout/activity_app_view.xml
@@ -35,7 +35,21 @@
         android:elevation="8dp"
         android:clipChildren="false"
         android:clipToPadding="false"/>
-    
+
+    <ImageButton
+        android:id="@+id/settingsButton"
+        android:layout_width="70dp"
+        android:layout_height="65dp"
+        android:cropToPadding="false"
+        android:scaleType="fitXY"
+        android:layout_marginTop="@dimen/activity_safearea_top"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_settings"
+        android:preferKeepClear="true"
+        style="?android:attr/borderlessButtonStyle"/>
+
     <TextView
         android:id="@+id/appListText"
         android:layout_width="match_parent"
@@ -46,6 +60,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginLeft="90dp"
         android:gravity="end"
         android:paddingTop="@dimen/activity_safearea_top"
         android:paddingBottom="15dp"
