--- a/app/src/main/res/layout/activity_pc_view.xml
+++ b/app/src/main/res/layout/activity_pc_view.xml
@@ -1,6 +1,7 @@
 <!-- Portrait orientation only -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pcViewRootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/advance_setting_background"
@@ -23,6 +24,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:clickable="false"
+        android:focusable="false"
         >
 
         <RelativeLayout
@@ -70,10 +73,10 @@
 
     <ImageButton
         android:id="@+id/settingsButton"
-        android:layout_width="70dp"
-        android:layout_height="65dp"
+        android:layout_width="@dimen/pc_toolbar_button_size"
+        android:layout_height="@dimen/pc_toolbar_button_size"
         android:cropToPadding="false"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:layout_marginTop="@dimen/activity_safearea_top"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -84,10 +87,10 @@
 
     <ImageButton
         android:id="@+id/aboutButton"
-        android:layout_width="70dp"
-        android:layout_height="65dp"
+        android:layout_width="@dimen/pc_toolbar_button_size"
+        android:layout_height="@dimen/pc_toolbar_button_size"
         android:cropToPadding="false"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:layout_marginTop="@dimen/activity_safearea_top"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/settingsButton"
@@ -98,10 +101,10 @@
 
     <ImageButton
         android:id="@+id/easyTierControlButton"
-        android:layout_width="70dp"
-        android:layout_height="65dp"
+        android:layout_width="@dimen/pc_toolbar_button_size"
+        android:layout_height="@dimen/pc_toolbar_button_size"
         android:cropToPadding="false"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:layout_marginTop="@dimen/activity_safearea_top"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/aboutButton"
@@ -111,10 +114,10 @@
     
     <ImageButton
         android:id="@+id/toggleUnpairedButton"
-        android:layout_width="70dp"
-        android:layout_height="65dp"
+        android:layout_width="@dimen/pc_toolbar_button_size"
+        android:layout_height="@dimen/pc_toolbar_button_size"
         android:cropToPadding="false"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:layout_marginTop="@dimen/activity_safearea_top"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/restoreSessionButton"
@@ -124,10 +127,10 @@
     
     <ImageButton
         android:id="@+id/restoreSessionButton"
-        android:layout_width="70dp"
-        android:layout_height="65dp"
+        android:layout_width="@dimen/pc_toolbar_button_size"
+        android:layout_height="@dimen/pc_toolbar_button_size"
         android:cropToPadding="false"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:layout_marginTop="@dimen/activity_safearea_top"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
